tests/wormhole/sfpi/gold/warn_spill.txt
In file included from ../../../include/sfpi.h:1259,
                 from test.h:11,
                 from warn.cc:5:
../../../include/wormhole/sfpi_imp.h: In function 'void spill()':
../../../include/wormhole/sfpi_imp.h:99:11: fatal error: cannot store sfpu register (register spill)
   99 |     assign(__builtin_rvtt_sfpxloadi(SFPXLOADI_MOD0_FLOAT, __f32asui(val)));
      |     ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
